@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-07-08T01:07:28Z",
+  "timestamp" : "2022-07-08T08:17:29Z",
   "count_outdated" : 379,
   "uniques_outdated" : 205,
-  "count" : 406,
-  "uniques" : 220,
+  "count" : 407,
+  "uniques" : 221,
   "clones" : [
     {
       "timestamp": "2022-06-24T00:00:00Z",
@@ -100,6 +100,13 @@
       "timestamp": "2022-07-07T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-07-08T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
